--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xhr",
-  "description": "Easy to use funaction for making ajax requests.",
+  "description": "Easy to use function for making ajax requests.",
   "author": {
     "name": "Alexey Skakun",
     "email": "alex.skakun@me.com"
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "https://github.com/alex-skakun/XHR.git"
   },
-  "version": "0.1.0",
+  "version": "0.9.0",
   "license": "MIT",
   "devDependencies": {
     "grunt": "^0.4.5",
