--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,12 @@
 {
   "name": "XHR",
   "main": "xhr.min.js",
-  "version": "0.9.0",
+  "version": "1.0.0",
   "homepage": "https://github.com/alex-skakun/XHR",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alex-skakun/XHR.git"
+  },
   "authors": [
     "alex-skakun"
   ],
