--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "type": "git",
     "url": "https://github.com/alex-skakun/XHR.git"
   },
-  "version": "1.6.1",
+  "version": "2.0.0",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-uglify": "^0.6.0"
+    "del": "^2.2.0",
+    "gulp": "^3.9.0",
+    "gulp-bump": "^1.0.0",
+    "gulp-preprocess": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-tag-version": "^1.3.0",
+    "gulp-uglify": "^1.2.0",
+    "mime": "^1.3.4"
   }
 }
