--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "https://github.com/alex-skakun/XHR.git"
   },
-  "version": "2.1.1",
+  "version": "2.1.2",
   "license": "MIT",
   "devDependencies": {
     "del": "^2.2.0",
@@ -19,6 +19,9 @@
     "gulp-rename": "^1.2.2",
     "gulp-tag-version": "^1.3.0",
     "gulp-uglify": "^1.2.0",
+    "jasmine": "^2.5.3",
+    "karma": "^1.5.0",
+    "karma-jasmine": "^1.1.0",
     "mime": "^1.3.4"
   }
 }
