--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "https://github.com/alex-skakun/XHR.git"
   },
-  "version": "2.1.12",
+  "version": "2.1.13",
   "license": "MIT",
   "devDependencies": {
     "del": "^2.2.0",
@@ -23,5 +23,8 @@
     "karma": "^1.5.0",
     "karma-jasmine": "^1.1.0",
     "mime": "^1.3.4"
+  },
+  "dependencies": {
+    "bower": "^1.8.2"
   }
 }
